--- a/US_Tax_Distribution/Data_cleaning_and_solving.ipynb
+++ b/US_Tax_Distribution/Data_cleaning_and_solving.ipynb
@@ -285,6 +285,23 @@
     "df_cons_t_2 = df_cons_t_2.dropna()\n",
     "df_cons_t_2.to_csv(r\"C:\\Users\\wh\\Desktop\\us_tax_data\\consumption_over_time_2.csv\")"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### You can view the Dashboad via the link below\n",
+    "\n",
+    "https://lookerstudio.google.com/reporting/e7beec96-ea03-4353-a26d-304feb9bbee8\n",
+    "\n",
+    "This Dashboad wass built within 3 hours, therefore the Visualization could be done pettie, but I focused on visualising the insights"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
