--- a/US_Tax_Distribution/Data_cleaning_and_solving.ipynb
+++ b/US_Tax_Distribution/Data_cleaning_and_solving.ipynb
@@ -283,7 +283,7 @@
     "df_cons_t_2=  df_cons_t.merge(merged2, left_on='State',right_on ='State/Region' ,how='left')\n",
     "df_cons_t_2 = df_cons_t_2[['2018', '2019', '2020', 'State', 'Region', 'Population']]\n",
     "df_cons_t_2 = df_cons_t_2.dropna()\n",
-    "df_cons_t_2.to_csv(r\"C:\\Users\\wh\\Desktop\\us_tax_data\\consumption_over_time_2.csv\")"
+    "df_cons_t_2.to_csv(r\"C:\\Users\\wh\\Desktop\\us_tax_data\\consumption_over_time_2.csv\")\n"
    ]
   },
   {
