--- a/US_Tax_Distribution/Data_cleaning_and_solving.ipynb
+++ b/US_Tax_Distribution/Data_cleaning_and_solving.ipynb
@@ -295,7 +295,7 @@
     "\n",
     "https://lookerstudio.google.com/reporting/e7beec96-ea03-4353-a26d-304feb9bbee8\n",
     "\n",
-    "This Dashboad wass built within 3 hours, therefore the Visualization could be done pettie, but I focused on visualising the insights"
+    "This Dashboad was built within 3 hours, therefore the visualization could be done prettier. But main focus was on visualising the insights"
    ]
   },
   {
