--- a/NLP-NER/predict.ipynb
+++ b/NLP-NER/predict.ipynb
@@ -268,7 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However we can see, that it e.g did not recognize Kyiv in the sith row, howeverr it recognized it in the second row.\n",
+    "However we can see, that it e.g did not recognize Kyiv in the sixth row, however it recognized it in the second row.\n",
     "\n",
     "Therefore one suggestion was to seperate all dots from words as it may not recognize the word when special characters are part of the word.\n",
     "\n",
