--- a/NLP-NER/predict.ipynb
+++ b/NLP-NER/predict.ipynb
@@ -272,7 +272,7 @@
     "\n",
     "Therefore one suggestion was to seperate all dots from words as it may not recognize the word when special characters are part of the word.\n",
     "\n",
-    "Unfortunately it still didn't help. \n",
+    "Unfortunately this still didn't help. \n",
     "\n"
    ]
   }
